[gd_scene load_steps=114 format=2]

[ext_resource path="res://assets/olho/olho_damage.png" type="Texture" id=1]
[ext_resource path="res://assets/olho/olho_melee.png" type="Texture" id=2]
[ext_resource path="res://scripts/Inimigo.gd" type="Script" id=3]
[ext_resource path="res://assets/olho/olho_shoot.png" type="Texture" id=4]
[ext_resource path="res://assets/olho/olho_death.png" type="Texture" id=5]
[ext_resource path="res://assets/olho/olho_idle.png" type="Texture" id=6]
[ext_resource path="res://assets/olho/olho_shieldcast.png" type="Texture" id=7]
[ext_resource path="res://assets/olho/olho_lasercast.png" type="Texture" id=8]
[ext_resource path="res://assets/olho/olho_glow.png" type="Texture" id=9]
[ext_resource path="res://assets/damage_DukeStone.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/shield_DukeStone.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/laser_DukeStone.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sword_DukeStone.wav" type="AudioStream" id=13]

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 6 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 6 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 6 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 6 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 6 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 6 )
region = Rect2( 800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 6 )
region = Rect2( 900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 6 )
region = Rect2( 1000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 6 )
region = Rect2( 1100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 6 )
region = Rect2( 1200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 6 )
region = Rect2( 1300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 6 )
region = Rect2( 1400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 6 )
region = Rect2( 1500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 1000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 1100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 1200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 1300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 4 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 4 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 4 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 4 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 4 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 4 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 4 )
region = Rect2( 800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 6 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 6 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 6 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 6 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 6 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 6 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 6 )
region = Rect2( 800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 6 )
region = Rect2( 900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 6 )
region = Rect2( 1000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 6 )
region = Rect2( 1100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 6 )
region = Rect2( 1200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 6 )
region = Rect2( 1300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 6 )
region = Rect2( 1400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 6 )
region = Rect2( 1500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 2 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 2 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 2 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 2 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 2 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 1 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 1 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 7 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 7 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 7 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 7 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 7 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 7 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 7 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 7 )
region = Rect2( 800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 7 )
region = Rect2( 900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 9 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 9 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 9 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 9 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 9 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 9 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 9 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 8 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 8 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 8 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 8 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 8 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 8 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=40]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "death",
"speed": 9.0
}, {
"frames": [ SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ) ],
"loop": true,
"name": "melee",
"speed": 9.0
}, {
"frames": [ SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ) ],
"loop": false,
"name": "damage",
"speed": 7.0
}, {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ) ],
"loop": true,
"name": "shield",
"speed": 5.0
}, {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": true,
"name": "glow",
"speed": 5.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": true,
"name": "lasercast",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=90]
extents = Vector2( 5.58823, 15.2941 )

[sub_resource type="RectangleShape2D" id=84]
extents = Vector2( 1.17648, 26.7647 )

[node name="AnimatedSprite" type="AnimatedSprite"]
position = Vector2( 923, 198 )
scale = Vector2( 1.7, 1.7 )
frames = SubResource( 40 )
animation = "idle"
frame = 14
playing = true
flip_h = true
script = ExtResource( 3 )

[node name="hurtBox" type="Area2D" parent="."]
position = Vector2( -21.1765, -6.47058 )
collision_layer = 512
collision_mask = 512
__meta__ = {
"_edit_group_": true
}

[node name="colliisionHurt" type="CollisionShape2D" parent="hurtBox"]
position = Vector2( 4.4118, 5.29412 )
shape = SubResource( 90 )

[node name="hitbox" type="Area2D" parent="."]

[node name="collisionHit" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -28.2352, -0.588235 )
shape = SubResource( 84 )

[node name="damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="sword" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="laser" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="shield" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[connection signal="animation_finished" from="." to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="hurtBox" to="." method="_on_hurtBox_area_entered"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
